[gd_scene load_steps=23 format=3 uid="uid://cd8rifdbfae7w"]

[ext_resource type="Script" uid="uid://ovjf520bwdop" path="res://scripts/Main.gd" id="1_jyhfs"]
[ext_resource type="Texture2D" uid="uid://ha3vc27caxhm" path="res://assets/sprites/sprite.png" id="2_tbgi4"]
[ext_resource type="PackedScene" uid="uid://chl37jn5e0qul" path="res://scenes/Background.tscn" id="2_tefeu"]
[ext_resource type="Script" uid="uid://cymyyhokpevc" path="res://scripts/BossManager.gd" id="3_o6xl0"]
[ext_resource type="Script" uid="uid://bxe8nwluwnkas" path="res://scripts/Skier.gd" id="3_tefeu"]
[ext_resource type="AudioStream" uid="uid://bl0vkvro7hciy" path="res://assets/sounds/skionsnow.wav" id="4_o6xl0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h2yge"]
atlas = ExtResource("2_tbgi4")
region = Rect2(0, 926, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bvp3"]
atlas = ExtResource("2_tbgi4")
region = Rect2(766, 926, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_lquwl"]
atlas = ExtResource("2_tbgi4")
region = Rect2(383, 926, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mycd"]
atlas = ExtResource("2_tbgi4")
region = Rect2(0, 0, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_272bh"]
atlas = ExtResource("2_tbgi4")
region = Rect2(766, 0, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vw27"]
atlas = ExtResource("2_tbgi4")
region = Rect2(383, 0, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_kek77"]
atlas = ExtResource("2_tbgi4")
region = Rect2(0, 463, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c57u"]
atlas = ExtResource("2_tbgi4")
region = Rect2(766, 463, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_efxa6"]
atlas = ExtResource("2_tbgi4")
region = Rect2(383, 463, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg77c"]
atlas = ExtResource("2_tbgi4")
region = Rect2(0, 926, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycdy4"]
atlas = ExtResource("2_tbgi4")
region = Rect2(383, 926, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_w48qg"]
atlas = ExtResource("2_tbgi4")
region = Rect2(0, 0, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_vivmo"]
atlas = ExtResource("2_tbgi4")
region = Rect2(383, 0, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cqfq"]
atlas = ExtResource("2_tbgi4")
region = Rect2(0, 463, 320, 445)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaehf"]
atlas = ExtResource("2_tbgi4")
region = Rect2(383, 463, 320, 445)

[sub_resource type="SpriteFrames" id="SpriteFrames_0xm2m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2yge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bvp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lquwl")
}],
"loop": true,
"name": &"jump_center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mycd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_272bh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vw27")
}],
"loop": true,
"name": &"jump_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kek77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c57u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efxa6")
}],
"loop": true,
"name": &"jump_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg77c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycdy4")
}],
"loop": true,
"name": &"ski_center",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w48qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vivmo")
}],
"loop": true,
"name": &"ski_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cqfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaehf")
}],
"loop": true,
"name": &"ski_right",
"speed": 5.0
}]

[node name="Main" type="Node2D"]
script = ExtResource("1_jyhfs")

[node name="Background" parent="." instance=ExtResource("2_tefeu")]
position = Vector2(0, 1)

[node name="BossManager" type="Node2D" parent="."]
script = ExtResource("3_o6xl0")

[node name="Skier" type="AnimatedSprite2D" parent="."]
position = Vector2(400, 500)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_0xm2m")
animation = &"jump_center"
script = ExtResource("3_tefeu")

[node name="SkiSound" type="AudioStreamPlayer" parent="Skier"]
stream = ExtResource("4_o6xl0")
volume_db = -17.802

[node name="ObstacleContainer" type="Node2D" parent="."]
position = Vector2(-4, 0)

[node name="MainMessageLabel" type="Label" parent="."]
offset_left = 256.0
offset_top = 29.0
offset_right = 535.0
offset_bottom = 64.0
theme_override_colors/font_color = Color(0.241427, 0.0395705, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
